<resources>
    <string name="label_app_name">Zalo</string>
    <string name="label_register">Đăng ký</string>
    <string name="label_log_in">Đăng nhập</string>
    <string name="label_vietnamese"><u>Tiếng Việt</u></string>
    <string name="label_english"><u>Tiếng Anh</u></string>
    <string name="label_get_password"><u><b>Lấy lại mật khẩu</b></u></string>
    <string name="label_chat_tab">Tin nhắn</string>
    <string name="label_watch_tab">Xem</string>
    <string name="label_contacts_tab">Danh bạ</string>
    <string name="label_groups_tab">Nhóm</string>
    <string name="label_faq"><b><u>Câu hỏi thường gặp</u></b></string>
    <string name="label_diary_tab">Nhật ký</string>
    <string name="label_more">Thêm</string>
    <string name="label_newly_updated_friends">Bạn mới cập nhật</string>
    <string name="label_all_contacts">Tất cả danh bạ</string>
    <string name="label_update">Cập nhật</string>
    <string name="label_official_account_sub_tab">OFFICIAL ACCOUNT</string>
    <string name="label_update_contact">Cập nhật danh bạ</string>
    <string name="label_close_friends">Bạn thân</string>
    <string name="label_find_around">Tìm quanh đây</string>
    <string name="label_chat_rooms">Phòng trò chuyện</string>
    <string name="label_shop">Shop</string>
    <string name="label_stickers">Stickers</string>
    <string name="label_channel">Channel</string>
    <string name="label_game">Game</string>
    <string name="label_e_government">eGovernment</string>
    <string name="label_bank">Bank</string>
    <string name="label_food">Food</string>
    <string name="label_add_group">Tạo nhóm với:</string>
    <string name="label_joined_groups">Nhóm đã tham gia</string>
    <string name="label_recent">Gần đây</string>
    <string name="label_upload_image">Tải ảnh lên</string>
    <string name="label_upload">Tải lên</string>
    <string name="label_upload_video">Tải video lên</string>
    <string name="label_create_new">Tạo mới</string>
    <string name="label_choose_from_lib">Chọn từ thư viện</string>
    <string name="label_choose_from">Chọn từ</string>
    <string name="label_me">Tôi</string>
    <string name="label_just_now">Vừa xong</string>
    <string name="label_second">giây</string>
    <string name="label_minute">phút</string>
    <string name="label_hour">giờ</string>
    <string name="label_day">ngày</string>
    <string name="label_continue">Tiếp tục</string>
    <string name="label_name">Tên</string>
    <string name="label_reply">Trả lời</string>
    <string name="label_add_friend">Thêm bạn</string>
    <string name="label_add">Thêm</string>
    <string name="label_new_group">Nhóm mới</string>
    <string name="label_scan_qr">Quét mã QR</string>
    <string name="label_zalo_desktop">Zalo cho Máy Tính</string>
    <string name="label_zalo_calendar">Lịch Zalo</string>
    <string name="label_send_file">Truyền File</string>
    <string name="label_open">Mở</string>
    <string name="label_copy">Copy</string>
    <string name="label_share">Chia sẻ</string>
    <string name="label_revoke">Thu hồi</string>
    <string name="label_remind">Nhắc hẹn</string>
    <string name="label_detail">Chi tiết</string>
    <string name="label_delete">Xóa</string>
    <string name="label_download">Lưu về máy</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Hủy</string>
    <string name="label_error_occurred">Đã có lỗi xảy ra</string>
    <string name="label_error_code">Mã lỗi</string>
    <string name="label_error">Lỗi</string>
    <string name="label_end_call">Kết thúc cuộc gọi</string>
    <string name="label_callback">Gọi lại</string>
    <string name="label_no_name">Không tên</string>
    <string name="label_read_more">Xem thêm</string>
    <string name="label_friends">Bạn bè</string>
    <string name="label_discard_image">Bỏ ảnh ?</string>
    <string name="label_discard">Bỏ</string>
    <string name="label_keep">Giữ lại</string>
    <string name="label_profile">Trang cá nhân</string>
    <string name="label_add_story_to_highlights">Thêm vào tin nổi bật</string>
    <string name="label_new_highlight_story">Tin nổi bật mới</string>
    <string name="label_highlight_story">Tin nổi bật</string>
    <string name="label_create_post">Tạo bài viết</string>
    <string name="label_post">Đăng</string>
    <string name="label_add_image">Thêm ảnh</string>
    <string name="label_add_video">Thêm video</string>
    <string name="label_camera">Camera</string>
    <string name="label_discard_post">Bỏ bài viết ?</string>
    <string name="label_done">Xong</string>
    <string name="label_upload_service">Dịch vụ upload</string>
    <string name="label_follow">Theo dõi</string>
    <string name="label_report_comment">Tìm hỗ trợ hoặc báo cáo bình luận</string>
    <string name="label_validate_phone">Xác nhận số điện thoại</string>
    <string name="label_change">Thay đổi</string>
    <string name="label_confirm">Xác nhận</string>
    <string name="label_validate_code">Nhập mã kích hoạt</string>
    <string name="label_resend_code">Gửi lại mã</string>
    <string name="label_like">Thích</string>
    <string name="label_love">Thả tim</string>
    <string name="label_haha">Haha</string>
    <string name="label_care">Thương thương</string>
    <string name="label_wow">Wow</string>
    <string name="label_angry">Phẫn nộ</string>
    <string name="label_sad">Buồn</string>
    <string-array name="sort_group_options">
        <item>Hoạt động cuối</item>
        <item>Tên nhóm</item>
        <item>Nhóm quản lý</item>
        <item>Nhóm mở</item>
    </string-array>
    <string name="description_login">Vui lòng nhập số điện thoại và mật khẩu để đăng nhập</string>
    <string name="description_update_contact">Nhanh chóng thêm bạn vào Zalo từ danh bạ điện thoại</string>
    <string name="description_update_status">Cập nhật trạng thái của bạn và xem bạn bè mình đang nghĩ gì</string>
    <string name="description_avatar">Avatar</string>
    <string name="description_preview_image">Preview image</string>
    <string name="description_unseen">Unseen icon</string>
    <string name="description_interested_official_accounts">Official Account đã quan tâm</string>
    <string name="description_find_more_official_accounts">Tìm thêm Official Account</string>
    <string name="description_clear_text_icon">Xóa tất cả</string>
    <string name="description_emoji_icon">Biểu tượng cảm xúc</string>
    <string name="description_attach_file_icon">Chèn tệp</string>
    <string name="description_attach_voice_icon">Chèn âm thanh</string>
    <string name="description_attach_picture_icon">Chèn ảnh</string>
    <string name="description_send">Gửi</string>
    <string name="description_view_your_profile">Xem trang cá nhân của bạn</string>
    <string name="description_post_status_image">Đăng tin</string>
    <string name="description_shop">Diện chất mùa hạ</string>
    <string name="description_vote">Bình chọn</string>
    <string name="description_name_group">Đặt tên nhóm</string>
    <string name="description_create_group">Tạo nhóm mới</string>
    <string name="description_selected_count">Đã chọn: %d</string>
    <string name="description_image">Hình ảnh</string>
    <string name="description_video">Video</string>
    <string name="description_back">Trở lại</string>
    <string name="description_calling">Đang gọi &#8230;</string>
    <string name="description_not_answer">Không trả lời</string>
    <string name="description_ringing">Đang đổ chuông &#8230;</string>
    <string name="description_incoming_call">Cuộc gọi đến</string>
    <string name="description_muted_speaker">Đã tắt mic</string>
    <string name="description_un_muted_speaker">Đã bật mic</string>
    <string name="description_using_external_speaker">Đang dùng loa ngoài</string>
    <string name="description_disabled_external_speaker">Đã tắt loa ngoài</string>
    <string name="description_call_ended">Kết thúc cuộc gọi</string>
    <string name="description_end_call">Bạn muốn dừng cuộc trò chuyện ngay bây giờ ?</string>
    <string name="description_voice_call">Cuộc gọi thoại</string>
    <string name="description_video_call">Cuộc gọi video</string>
    <string name="description_incoming_voice_call">Cuộc gọi thoại đến</string>
    <string name="description_incoming_video_call">Cuộc gọi video đến</string>
    <string name="description_outgoing_voice_call">Cuộc gọi thoại đi</string>
    <string name="description_outgoing_video_call">Cuộc gọi video đi</string>
    <string name="description_missed_call">Cuộc gọi nhỡ</string>
    <string name="description_last_seen">Truy cập</string>
    <string name="description_ago">trước</string>
    <string name="description_just_online">Vừa mới truy cập</string>
    <string name="description_less_than_one_min">ít hơn 1 phút</string>
    <string name="description_typing">đang soạn tin</string>
    <string name="description_processing">Đang xử lý</string>
    <string name="description_sent">Đã gửi</string>
    <string name="description_no_connection">Không có kết nối</string>
    <string name="description_your_story">Tin của bạn</string>
    <string name="description_recent_story">Tin gần đây</string>
    <string name="description_create_story">Tạo tin</string>
    <string name="description_notification">Thông báo</string>
    <string name="description_back_again_to_exit">Bấm lần nữa để thoát</string>
    <string name="description_discard_image">Nếu quay lại bây giờ bạn sẽ mất ảnh này</string>
    <string name="description_post">Bài đăng</string>
    <string name="description_followers">Người theo dõi</string>
    <string name="description_following">Đang theo dõi</string>
    <string name="description_story_created">Đã thêm vào tin của bạn</string>
    <string name="description_story_marked">Đã thêm vào tin nổi bật</string>
    <string name="description_story_unmarked">Đã xóa khỏi tin nổi bật</string>
    <string name="description_discard_post">Nếu quay lại bây giờ thay đổi của bạn sẽ không được lưu lại</string>
    <string name="description_post_created">Đã đăng bài viết</string>
    <string name="description_view_replies">Xem %d câu trả lời</string>
    <string name="description_uploading_post">Bài viết của bạn đang được tải lên</string>
    <string name="description_upload_success">Đăng bài viết thành công</string>
    <string name="description_upload_fail">Đã có lỗi xảy ra khi đăng bài viết của bạn</string>
    <string name="description_react_people">Những người bày tỏ cảm xúc</string>
    <string name="description_all">Tất cả</string>
    <string name="description_react">Bày tỏ cảm xúc về bình luận này</string>
    <string name="description_comment_deleted">Đã xóa bình luận</string>
    <string name="description_register_name">Sử dụng tên thật giúp bạn bè dễ dàng nhận ra bạn.</string>
    <string name="description_register_phone">Nhập số điện thoại của bạn để tạo tài khoản mới.</string>
    <string name="description_policy">Tiếp tục có nghĩa là bạn đồng ý với các <u>điều khoản</u> sử dụng Zalo</string>
    <string name="description_validate_phone">Chúng tôi sẽ gửi mã xác nhận đến số điện thoại trên. Vui lòng xác nhận số điện thoại này là đúng.</string>
    <string name="description_validate_code">Vui lòng không chia sẽ mã xác thực để tránh mất tài khoản</string>
    <string name="description_validate_code_sent">Đã gửi mã đến số %s</string>
    <string name="description_check_sms">Xin kiểm tra SMS và điền mã xác nhận bên dưới</string>
    <string name="description_invalid_phone">Số điện thoại không hợp lệ</string>
    <string name="hint_phone_number">Số điện thoại</string>
    <string name="hint_name">Tên đầy đủ</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_message">Tin nhắn</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="hint_full_name">Tên đầy đủ</string>
    <string name="hint_search_friends_messages">Tìm bạn bè, tin nhắn &#8230;</string>
    <string name="hint_create_post">Bạn đang nghĩ gì ?</string>
</resources>