<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeActivity">
    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/add_friend"
        android:title="@string/label_add_friend"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_scan_qr"
        android:icon="@drawable/scan_qr"
        android:title="@string/label_scan_qr"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_zalo_desktop"
        android:icon="@drawable/zalo_desktop"
        android:title="@string/label_zalo_desktop"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_zalo_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/label_zalo_calendar"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_send_file"
        android:icon="@drawable/send_file"
        android:title="@string/label_send_file"
        app:showAsAction="never|withText" />
</menu>
