<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/diary"
        android:title="@string/label_diary_tab" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat"
        android:title="@string/label_chat_tab" />

    <item
        android:id="@+id/navigation_watch"
        android:icon="@drawable/watch"
        android:title="@string/label_watch_tab" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/profile"
        android:title="@string/label_profile" />

    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/test"
        android:title="test" />

</menu>