<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_up.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_action_bar_height"
        android:background="@drawable/primary_gradient_bg"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImgView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/left_arrow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/label_register"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/sizeTextBig"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/backImgView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nameDescTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/description_register_name"
        android:textColor="@color/colorButtonStroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/nameLayout"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="phone"
        app:boxBackgroundColor="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameDescTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:text="Tai Than" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/clearNameImgView"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_clear_text_icon"
        android:padding="8dp"
        android:src="@drawable/cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/nameLayout"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/nameLayout"
        app:tint="@color/lightTextStrongGray"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/phoneDescTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/description_register_phone"
        android:textColor="@color/colorButtonStroke"
        app:layout_constraintEnd_toEndOf="@id/nameDescTV"
        app:layout_constraintStart_toStartOf="@id/nameDescTV"
        app:layout_constraintTop_toBottomOf="@id/nameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneDescTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:text="0123456789" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/clearPhoneImgView"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_clear_text_icon"
        android:padding="8dp"
        android:src="@drawable/cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/phoneLayout"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/phoneLayout"
        app:tint="@color/lightTextStrongGray"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/phoneWarningTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_invalid_phone"
        android:textColor="@color/missedCall"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout"
        tools:visibility="visible" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@color/colorMessageStroke"
        android:contentDescription="@string/description_create_group"
        android:padding="16dp"
        android:rotation="180"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:riv_mutate_background="true"
        app:riv_oval="true" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/description_policy"
        android:textColor="@color/colorButtonStroke"
        app:layout_constraintBottom_toBottomOf="@id/continueButton"
        app:layout_constraintEnd_toStartOf="@id/continueButton"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>