<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intro.IntroActivity"
    android:background="@drawable/intro_bg">

    <ImageView
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/zalo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/label_log_in"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/label_register"
        app:layout_constraintBottom_toTopOf="@id/vnTextView"
        app:layout_constraintLeft_toLeftOf="@id/loginButton"
        app:layout_constraintRight_toRightOf="@id/loginButton" />

    <TextView
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/vnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_vietnamese"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/engTextView" />

    <TextView
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/engTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_english"
        app:layout_constraintBottom_toBottomOf="@id/vnTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/vnTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/vnTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>