<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/size_small_8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSuggestFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />


        <LinearLayout
            android:id="@+id/closeFriendsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small_8dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="@dimen/size_small_8dp"
            android:paddingBottom="@dimen/size_small_8dp">

            <TextView
                android:id="@+id/closeFriendsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_medium_16dp"
                android:text="@string/label_close_friends"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCloseFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_small_8dp" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newlyUpdatedFriendsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small_8dp"
            android:background="@android:color/white"
            android:paddingTop="@dimen/size_small_8dp"
            android:paddingBottom="@dimen/size_small_8dp">

            <TextView
                android:id="@+id/statusDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_medium_16dp"
                android:text="@string/label_newly_updated_friends"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/switch1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/switch1" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_medium_16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_medium_16dp"
                android:layout_marginTop="@dimen/size_medium_16dp"
                android:layout_marginRight="@dimen/size_medium_16dp"
                android:background="@color/colorBackground"
                android:padding="@dimen/size_small_8dp"
                android:text="@string/description_update_status"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusDescTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/allContactsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_small_8dp"
            android:background="@android:color/white"
            android:paddingTop="@dimen/size_small_8dp"
            android:paddingBottom="@dimen/size_small_8dp">

            <TextView
                android:id="@+id/allContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_medium_16dp"
                android:text="@string/label_all_contacts"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_medium_16dp"
                android:text="@string/label_update"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allContactRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_small_8dp"
                app:layout_constraintTop_toBottomOf="@id/allContactTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/updateContactDescTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_medium_16dp"
            android:layout_marginTop="@dimen/size_medium_16dp"
            android:layout_marginRight="@dimen/size_medium_16dp"
            android:text="@string/description_update_contact"
            android:textAlignment="center" />


        <Button
            android:id="@+id/updateContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium_16dp"
            android:text="@string/label_update_contact" />
    </LinearLayout>
</ScrollView>