<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/itemRoomRootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/size_medium_16dp"
            android:paddingTop="@dimen/size_small_8dp"
            android:paddingRight="@dimen/size_medium_16dp"
            android:paddingBottom="@dimen/size_small_8dp">

            <ImageView
                android:id="@+id/avatarImgView"
                android:layout_width="@dimen/size_room_item_avatar_48dp"
                android:layout_height="@dimen/size_room_item_avatar_48dp"
                android:contentDescription="@string/description_avatar"
                android:src="@drawable/official_account" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/size_medium_16dp"
                android:layout_marginRight="@dimen/size_medium_16dp"
                android:text="@string/description_find_more_official_accounts" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_small_8dp"
            android:background="@color/colorDividerBg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="@dimen/size_small_8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_medium_16dp"
                android:layout_marginRight="@dimen/size_medium_16dp"
                android:text="@string/description_interested_official_accounts"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_small_8dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>